--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "@tarojs/plugin-html": "^3.3.2",
     "@tarojs/runtime": "3.4.13",
     "@tarojs/taro": "3.4.13",
+    "axios": "^0.27.2",
+    "axios-taro-adapter": "^0.0.3",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "taro-plugin-tailwind": "^1.2.8",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
