--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-vue": "^8.0.0",
     "stylelint": "^14.4.0",
     "tarojs-plugin-platform-miniprogram": "^0.1.1",
+    "terser-webpack-plugin": "^3.0.5",
     "vue-loader": "^16.0.0-beta.8"
   }
 }
